# protodec

./: CMakeLists.txt  README.md  example.cpp  proto.hpp  protoc.cpp
